# py-ollama-agent-kit

./: .env.example  .gitignore  README.md  pyproject.toml
data/: rag_index.json
docs/demo-kb/: 01-overview.md  02-chat-and-tools.md  03-rag.md  04-cli.md  05-troubleshooting.md  06-sample-questions.md  07-python-execution.md  README.md
examples/: custom_tools.py
src/ollama_agent_kit/: agent.py  cli.py  config.py  context_manager.py  mcp.py  mcp_test_server.py  ollama_client.py  rag.py  remote_mcp_test_server.py  session_export.py  tools.py
tests/: test_agent_debug_log.py  test_agent_hallucination_guard.py  test_agent_rag_integration.py  test_cli_demo.py  test_cli_rag_output.py  test_cli_session_export.py  test_context_management.py  test_ollama_client_streaming.py  test_rag.py  test_session_export.py  test_tools.py
tutorials/: agent-project-roadmap.md  rag-knowledge-base-explained.md
